authentication/keycloak/ts-db-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-db-ts-dep
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-db-ts
  template:
    metadata:
      labels:
        app: keycloak-db-ts
    spec:
      containers:
        - name: keycloak-db-ts
          image: postgres
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "keycloak"]
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "keycloak"]
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: keycloak-db-ts-pvc
