authentication/keycloak/web-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-web-dep
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak-web
  template:
    metadata:
      labels:
        app: keycloak-web
    spec:
      containers:
        - name: keycloak-web
          image: quay.io/keycloak/keycloak:26.0.0
          command:
            - /opt/keycloak/bin/kc.sh
            - start
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
