authentication/keycloak/ts-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-ts-service
  namespace: keycloak
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    app: keycloak-db-ts
  type: ClusterIP
