authentication/keycloak/ts-web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-web-ts-svc
  namespace: keycloak
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak-web-ts
  type: ClusterIP
