authentication/keycloak/web-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-web-svc
  namespace: keycloak
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: keycloak-web
  type: ClusterIP
