authentication/keycloak/ts-web-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-web-ingress-ts
  namespace: keycloak
  # annotations:
  #   cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production 
spec:
  # tls:
  # - hosts:
  #   - auth.snowse-ts.duckdns.org
  #   secretName: keycloak-tls-ts-2-secret-prod
  rules:
  - host: auth.snowse-ts.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-web-ts-svc
            port:
              number: 8080
