authentication/keycloak/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-web-ingress
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production 
spec:
  tls:
  - hosts:
    - auth.snowse.duckdns.org
    secretName: keycloak-tls-secret-prod
  rules:
  - host: auth.snowse.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-web-svc
            port:
              number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-web-ingress-ts
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-webhook-duckdns-alex-production 
spec:
  tls:
  - hosts:
    - auth.snowse-ts.duckdns.org
    secretName: keycloak-tls-secret-prod
  rules:
  - host: auth.snowse-ts.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: keycloak-web-svc
            port:
              number: 8080
